--- a/Sources/Client.Web/Themes/css/core.css
+++ b/Sources/Client.Web/Themes/css/core.css
@@ -1,12 +1,22 @@
-﻿/* ClearFix
----------------------------------------------------------------------------------------------------------------------------------*/
+﻿label			{ float: left; font-family: Arial, Helvetica, sans-serif; }
+body			{}
+a				{ text-decoration: none; }
+html {
+    background-color: #e2e2e2;
+    margin: 0;
+    padding: 0;
+}
+/* __________________________________________ ClearFix __________________________________________*/
 .clearFix			{ clear: both; width: 100%; }
 .clearFixBorder		{ clear: both; width: 100%; }
 .clearFix.Alt		{ }
-/* Footer
----------------------------------------------------------------------------------------------------------------------------------*/
+
+
+#body			{width: 100%; height: 100%; }
+
+/* __________________________________________ Footer __________________________________________*/
 #footerContainer		{ clear: both; overflow: hidden; display: block;  }
-.footer					{ clear: both; margin:auto; position: relative; overflow: hidden;}
+.footer					{ display: block; margin:auto; position: relative; overflow: hidden;}
 #vwLogo					{ position: absolute; }
 .footer ul				{ }
 .footer ul li			{ font-family: Arial, Helvetica, sans-serif; }
@@ -17,3 +27,57 @@
 .footer	p				{ }
 .listContainers			{ float: left; }
 h3.footerTitles			{ font-family: Arial, Helvetica, sans-serif; }
+
+/* __________________________________________ Core __________________________________________*/
+.contentWrapper		{ }
+.left-column		{ }
+.right-column		{ }
+
+.left-columnAlt		{ }
+.right-columnAlt	{ }
+.full-columnAlt		{ }
+
+/* __________________________________________ Main navigation __________________________________________*/
+.menu-bar-holder			{ }
+ul#menu-bar					{ }
+							/* Main module classes */
+							.menu-bar-holder#searchBuy ul#menu-bar		{ }
+							.menu-bar-holder#account ul#menu-bar		{ }
+							.menu-bar-holder#projects ul#menu-bar		{ }
+							.menu-bar-holder#supplier ul#menu-bar		{ }
+							.menu-bar-holder#reports ul#menu-bar		{ }
+							.menu-bar-holder#tenders ul#menu-bar		{ }
+
+ul#menu-bar li				{ text-transform: uppercase; text-align: center; }
+			li.searchBuy 	{ }
+			li.myAccount   	{ }
+			li.myProjects 	{ }
+			li.catMan 		{ }
+			li.reports  	{ }
+			li.tender 		{ }
+ul#menu-bar li a			{  
+							-webkit-border-top-left-radius: 5px;
+							-webkit-border-top-right-radius: 5px;
+							-moz-border-radius-topleft: 5px;
+							-moz-border-radius-topright: 5px;
+							border-top-left-radius: 5px;
+							border-top-right-radius: 5px;
+							}
+			li.searchBuy a.active 	{ }
+			li.myAccount a.active	{ }
+			li.myProjects a.active	{ }
+			li.catMan a.active		{ }
+			li.reports a.active		{ }
+			li.tender a.active		{ }
+			
+			ul#menu-bar li a:hover 	{ }
+			
+.menubarCapend				{ }
+							/* Main module classes */
+							.menu-bar-holder#searchBuy .menubarCapend			{ }
+							.menu-bar-holder#account .menubarCapend				{ }
+							.menu-bar-holder#projects .menubarCapend			{ }
+							.menu-bar-holder#supplier .menubarCapend			{ }
+							.menu-bar-holder#reports .menubarCapend				{ }
+							.menu-bar-holder#tenders .menubarCapend				{ }
+							
