--- a/Sources/Client.Web/Views/Shared/MasterPages/_Layout.cshtml
+++ b/Sources/Client.Web/Views/Shared/MasterPages/_Layout.cshtml
@@ -6,9 +6,13 @@
     <head>
         <meta charset="utf-8" />
         <title>MvcJqGrid</title>
-        <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+        
         <link href="@Url.Content("~/Content/themes/smoothness/jquery-ui-1.10.3.custom.min.css")" rel="stylesheet" type="text/css" />
         <link href="@Url.Content("~/Content/jquery.jqGrid/ui.jqgrid.css")" rel="stylesheet" type="text/css" />
+        <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+        <link href="@Url.Content("~/Themes/css/core.css")" rel="stylesheet" type="text/css" />
+        <link href="@Url.Content("~/Themes/css/textsize1.css")" rel="stylesheet" type="text/css" />
+        <link href="@Url.Content("~/Themes/css/contrast1.css")" rel="stylesheet" type="text/css" />
         <script src="@Url.Content("~/Scripts/modernizr.custom.05850.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/jquery-1.9.1.min.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/jquery-ui.min.js")" type="text/javascript"></script>
@@ -19,13 +23,13 @@
         <header>
             @Html.Action(HeaderControlController.IndexAction, HeaderControlController.Name)
         </header>
-        @Html.ValidationSummary()
-        <div id="body">
-            @RenderSection("featured", false)
+        
+		<div id="body">
             <section class="content-wrapper main-content clear-fix">
                 @RenderBody()
             </section>
         </div>
+
         <footer>
             @Html.Action(FooterControlController.IndexAction, FooterControlController.Name)
         </footer>
