Добавлен основной грид

--- a/Sources/Client.Web/Views/Home/Index.cshtml
+++ b/Sources/Client.Web/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Client.Web.Controllers
+
 <header>
     <div class="content-wrapper">
         <div class="float-left">
@@ -51,7 +52,7 @@
             </li>
             <li class="three">
                 <h5>Потестить грид</h5>
-                @Html.ActionLink("ссылка на тестовый грид.", TestGridController.IndexAction, TestGridController.Name)
+                @Html.ActionLink("ссылка на тестовый грид.", MainGridController.IndexAction, MainGridController.Name)
             </li>
         </ol>
     </section>
