--- a/Sources/Client.Web/Views/Shared/Controls/Header/HeaderControl.cshtml
+++ b/Sources/Client.Web/Views/Shared/Controls/Header/HeaderControl.cshtml
@@ -8,7 +8,7 @@
     </section>
     <nav>
       <ul id="menu">
-        <li>@Html.ActionLink("TestGrid", "Index", "TestGrid")</li>
+        <li>@Html.ActionLink("MainGridControl", "Index", "MainGrid")</li>
       </ul>
     </nav>
   </div>
