--- a/Sources/Client.Web/Views/MainGrid/Index.cshtml
+++ b/Sources/Client.Web/Views/MainGrid/Index.cshtml
@@ -1,19 +1,22 @@
 ﻿@using Client.Web.Controllers
 @using MvcJqGrid
+
 @{
     Layout = "~/Views/Shared/MasterPages/_TwoColumnsLayout.cshtml";
 }
 
 <div class="right-columnAlt">
 	@(Html.Grid("Basic")
-    .SetCaption("UserRole")
+    .SetCaption("CashTransfer")
     .AddColumn(new Column("Id").SetLabel("Id"))
-    .AddColumn(new Column("Name"))
-    .AddColumn(new Column("Version"))
-    .SetUrl(Url.Action(TestGridController.ListAction, TestGridController.Name))
+	.AddColumn(new Column("DareCreation"))
+	.AddColumn(new Column("CurrencyType.Name"))
+    .AddColumn(new Column("TransferCount"))
+    .SetUrl(Url.Action(MainGridController.ListAction, MainGridController.Name))
     .SetAutoWidth(true)
     .SetRowNum(10)
     .SetRowList(new[]{10,15,20,50})
     .SetViewRecords(true)
     .SetPager("pager"))
+
 </div>
