--- a/Sources/Client.Web/Views/Errors/ObjectNotFound.cshtml
+++ b/Sources/Client.Web/Views/Errors/ObjectNotFound.cshtml
@@ -1,11 +1,10 @@
-﻿@using MP2.Core.Controlling.Controllers;
-@{
+﻿@{
     ViewBag.Title = "Page not found";
 }
 <div class="contentFixed">
     <div class="error no-validation-summary">
         <div id="icon">
-            <img alt="This object has not been found as it has been modified by another user" src="@Url.ThemeContent(@"error/error.png")">
+            <img alt="This object has not been found as it has been modified by another user" src="~/Images/error/error.png">
         </div>
         <h2>
             This object has not been found as it has been modified by another user</h2>
