--- a/Sources/Client.Web/Views/Errors/Unknown.cshtml
+++ b/Sources/Client.Web/Views/Errors/Unknown.cshtml
@@ -1,11 +1,10 @@
-﻿@using MP2.Core.Controlling.Controllers;
-@{
+﻿@{
     ViewBag.Title = "Unknown";
 }
 <div class="contentFixed">
     <div class="error no-validation-summary">
         <div id="icon">
-            <img alt="Unexpected error" src="@Url.ThemeContent(@"error/error.png")">
+            <img alt="Unexpected error" src="~/Images/error/error.png">
         </div>
         <h2>
             Unexpected error</h2>
