--- a/Sources/Client.Web/Views/Home/Index.cshtml
+++ b/Sources/Client.Web/Views/Home/Index.cshtml
@@ -51,8 +51,8 @@
                 <a href="http://go.microsoft.com/fwlink/?LinkId=245164">Learn more…</a>
             </li>
             <li class="three">
-                <h5>@Views.CashTransfer</h5>
-                @Html.ActionLink(@Views.CashTransfer, MainGridController.IndexAction, MainGridController.Name)
+                <h5>@Views.Transaction</h5>
+                @Html.ActionLink(@Views.Transaction, MainGridController.IndexAction, MainGridController.Name)
             </li>
         </ol>
     </section>
