--- a/Sources/Client.Web/Views/MainGrid/Index.cshtml
+++ b/Sources/Client.Web/Views/MainGrid/Index.cshtml
@@ -6,19 +6,21 @@
 }
 <div class="right-columnAlt">
 	@(Html.Grid("Basic")
-	.SetCaption(Views.CashTransfer)
-	.AddColumn(new Column("DareCreation").SetLabel(Views.DareCreation))
+	.SetCaption(Views.Transaction)
+	.AddColumn(new Column("RegistrationDate").SetLabel(Views.Transaction_RegistrationDate))
+	.AddColumn(new Column("TransactionDate").SetLabel(Views.Transaction_TransactionDate))
+	.AddColumn(new Column("TransactionNumber").SetLabel(Views.Transaction_TransactionNumber))
+	.AddColumn(new Column("TransactionCode").SetLabel(Views.Transaction_TransactionCode))
 	.AddColumn(new Column("CurrencyType.Name").SetLabel(Views.CurrencyType))
-	.AddColumn(new Column("TransferCount").SetLabel(Views.TransferCount))
+	.AddColumn(new Column("Value").SetLabel(Views.Transaction_Value))
 	.AddColumn(new Column("TransferType.Name").SetLabel(Views.TransferType))
 	.AddColumn(new Column("Comment").SetLabel(Views.Comment))
 	.AddColumn(new Column("TransferSubType.Name").SetLabel(Views.TransferSubType))
 	.SetUrl(Url.Action(MainGridController.ListAction, MainGridController.Name))
 	.SetAutoWidth(true)
-	.SetRowNum(10)
-	.SetRowList(new[] { 10, 15, 20, 50 })
-	.SetViewRecords(true)
-	.SetMultiSelect(true)
-	.SetMultiSelectWidth(20)
-	.SetPager("pager"))
+	.SetRowNum(20)
+	.SetVirtualScroll(true)
+    .SetViewRecords(true)
+    .SetHeight(230)
+    .SetPager("pager"))
 </div>
