--- a/Sources/Client.Web/Views/Shared/Controls/Footer/FooterControl.cshtml
+++ b/Sources/Client.Web/Views/Shared/Controls/Footer/FooterControl.cshtml
@@ -26,11 +26,11 @@
 					</h3>
 				</li>
 			}
-			@if(Model.IsCashTransferEnabled)
+			@if(Model.IsTransactionEnabled)
 			{
 				<li>
 					<h3>
-						<a href="@Model.CashTransferUrl">@Views.CashTransfer</a>
+						<a href="@Model.TransactionUrl">@Views.Transaction</a>
 					</h3>
 				</li>
 			}
