--- a/Sources/Client.Web/Views/Errors/NoPermission.cshtml
+++ b/Sources/Client.Web/Views/Errors/NoPermission.cshtml
@@ -1,11 +1,10 @@
-﻿@using MP2.Core.Controlling.Controllers;
-@{
+﻿@{
     ViewBag.Title = "Page not found";
 }
 <div class="contentFixed">
     <div class="error no-validation-summary">
         <div id="icon">
-            <img alt="No Permission" src="@Url.ThemeContent(@"error/error.png")">
+            <img alt="No Permission" src="~/Images/error/error.png">
         </div>
         <h2>
             No Permission</h2>
