--- a/Sources/Client.Web/Views/Errors/PageNotFound.cshtml
+++ b/Sources/Client.Web/Views/Errors/PageNotFound.cshtml
@@ -1,11 +1,11 @@
-﻿@using MP2.Core.Controlling.Controllers;
+﻿@using Client.Web.Controllers
 @{
     ViewBag.Title = "Page not found";
 }
 <div class="contentFixed">
     <div class="error no-validation-summary">
         <div id="icon">
-            <img alt="Page not found" src="@Url.ThemeContent(@"error/error.png")">
+            <img alt="Page not found" src="~/Images/error/error.png">
         </div>
         <h2>
             Page not found</h2>
